--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -1,3 +1,122 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:08b329958842d911242f0a3770c738e329342bc1b812f0b5d721c77a705f77b6
-size 2656
+/* Import PT Sans font */
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap');
+
+body {
+  font-family: 'PT Sans',sans-serif;
+  margin: 0;
+  
+  color: #333; /* Neutral text color */
+  background-color: #ffffff; /* Light background for better readability */
+  padding: 0;
+  font-size: 1rem; /* Base font size */
+  line-height: 1.6; 
+  
+}
+
+header {
+  
+  
+  position: relative;
+  text-align: center; /* Centered header text */
+  background-image: url(../startingphotoS4C.png);
+  background-size: 130%; /* Ensures the image covers the header area */
+  background-position:center right 30%; /* Displays the top part of the image */
+  background-repeat: no-repeat; /* Prevents the image from repeating */
+  height: 55vh; /* Makes the header height 1/3 of the viewport height */
+  color: #ffffff; /* White text for contrast on the image */
+  display: flex;
+  align-items: top;
+  justify-content: center;
+  text-align: center;
+  padding: 30px 20px;
+}
+.logo {
+  position: absolute;
+  top: 45px;
+  marker-mid: 10px;
+  width: 240px; /* Maintain aspect ratio */
+  height: 240px; /* Adjust size as needed */
+}
+.logo2 {
+  position: absolute;
+  bottom: 10px;
+  marker-mid: 730px;
+  width: auto; /* Maintain aspect ratio */
+  height: 70px; /* Adjust size as needed */
+}
+main{
+  padding:  0 41px;
+
+}
+header h1 {
+  font-size: 3rem; /* Slightly larger heading for visibility */
+  font-weight: 700; /* Bold font for emphasis */
+  margin: 0;
+  color: #222; /* Darker text for better contrast */
+}
+
+nav ul {
+  list-style-type: none;
+  
+  margin: 10px 0;
+  display: flex;
+  justify-content: center; /* Center-align navigation links */
+  gap: 15px; /* Space between nav items */
+}
+
+nav ul li {
+  display: inline-block;
+}
+
+nav ul li a {
+  color: black; /* */
+  text-decoration: none;
+  font-weight: bold; /* Bold for emphasis */
+  font-size: 1rem;
+  transition: color 0.3s ease; /* Smooth hover effect */
+}
+
+nav ul li a:hover {
+  color: black; /* Darker blue for hover state */
+  text-decoration: underline;
+}
+
+
+
+section {
+  margin-bottom: 30px;
+}
+
+section h2 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  
+  color: black; /* Matches the link color */
+ 
+  
+}
+
+footer {
+  
+  text-align: center;
+  padding: 70px 0;
+  border-top: 1px solid #ddd;
+  color: #555; /* Subtle gray for footer text */
+  font-size: 0.9rem;
+  background-image: url(../logos/Partnerlogos.png);
+  background-size: 95%;
+  background-position: center; /* Displays the top part of the image */
+  background-repeat: no-repeat;
+  padding: 120px 0px ;
+
+}
+
+footer a {
+  color: #0056b3;
+  text-decoration: none;
+  font-weight: 700;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
